Fun with Triangles Final commit
Fun with Triangles Final commit

--- a/hypotenuse.html
+++ b/hypotenuse.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="hypotenuse.css">
     <title>Calculate Hypotenuse</title>
 </head>
 <body>
+    <nav>
+        <ul>
+        <a href="areaCalculation.html">Calculate Area</a>
+        <a href="hypotenuse.html">Calculate Hypotenuse</a>
+        <a href="triangleQuiz.html">TriangleQuiz</a>
+        <a href = "index.html">Check If Triangle</a>
+    </ul>
+    </nav>
     <h1>Calculate Hypotenuse</h1>
     <label>Enter first side length(a)</label>
     <input type="text" class="input"/>
