--- a/areaCalculation.html
+++ b/areaCalculation.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <nav>
+        <ul>
+        <a href="areaCalculation.html">Calculate Area</a>
+        <a href="hypotenuse.html">Calculate Hypotenuse</a>
+        <a href="triangleQuiz.html">TriangleQuiz</a>
+        <a href = "index.html">Check If Triangle</a>
+    </ul>
+    </nav>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="areaCalculation.css">
     <title>Area</title>
+
 </head>
 <body>
     <h1>Calculate Area</h1>
