--- a/triangleQuiz.html
+++ b/triangleQuiz.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="triangleQuiz.css">
     <title>Triangle Quiz</title>
 </head>
 <body>
+    <nav>
+        <ul>
+        <a href="areaCalculation.html">Calculate Area</a>
+        <a href="hypotenuse.html">Calculate Hypotenuse</a>
+        <a href="triangleQuiz.html">TriangleQuiz</a>
+        <a href = "index.html">Check If Triangle</a>
+    </ul>
+    </nav>
     <form id="quiz-form">
         <h1>Welcome to Triangle Quiz</h1>
             <div class="container>">
-            <p>A triangle is called Acute if the interior angles are lessthan?</p>
+            <p>1)A triangle is called Acute if the interior angles are lessthan?</p>
             <label><input type = "radio" name = question1 value = "60°" />60°
             </label>
             <label><input type = "radio" name = question1 value = "90°" />90°
@@ -19,7 +28,7 @@
             </label>
             </div>
             <div class="container">
-            <p>The sum of all three of the sides is called the </p>
+            <p>2)The sum of all three of the sides is called the </p>
             <label><input type = "radio" name = question2 value = "Perimeter" />Perimeter
             </label>
             <label><input type = "radio" name = question2 value = "Area" />Area
@@ -28,7 +37,7 @@
             </label>
             </div>
             <div class="container">
-            <p>Which of the following criteria is correct to find whether the given two triangles are similar or not? </p>
+            <p>3)Which of the following criteria is correct to find whether the given two triangles are similar or not? </p>
             <label><input type = "radio" name = question3 value = "SSS" />SSS
             </label>
             <label><input type = "radio" name = question3 value = "AAS" />AAS
@@ -37,7 +46,7 @@
             </label>
              </div>
              <div class="container">
-            <p>Which of the following is valid Triangle name based on the measure of sides? </p>
+            <p>4)Which of the following is valid Triangle name based on the measure of sides? </p>
             <label><input type = "radio" name = question4 value = "Isosceles" />Isosceles
             </label>
             <label><input type = "radio" name = question4 value = "Isometric" />Isometric
@@ -46,7 +55,7 @@
             </label>
             </div>
             <div class="container">
-            <p>The sum of Interior angles in a Triangle? </p>
+            <p>5)The sum of Interior angles in a Triangle? </p>
             <label><input type = "radio" name = question5 value = "60°" />60°
             </label>
             <label><input type = "radio" name = question5 value = "90°" />90°
