--- a/hypotenuse.html
+++ b/hypotenuse.html
@@ -19,7 +19,7 @@
     <h1>Calculate Hypotenuse</h1>
     <label>Enter first side length(a)</label>
     <input type="text" class="input"/>
-    <label>Enter first side length(b)</label>
+    <label>Enter second side length(b)</label>
     <input type="text" class="input"/>
     <button id="calculatebtn">Calculate</button>
     <div id = "output"></div>
